update(READ-me)
Signed-off-by: Daniel Ivanov <daniel.k.ivanov95@gmail.com>

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "landworks-nft-staking",
+  "name": "landworks-yf-contracts",
   "version": "1.0.0",
-  "description": "LandWorks NFT Staking contracts",
+  "description": "LandWorks Yield Farming Contracts",
   "main": "index.js",
   "scripts": {
     "compile": "npx hardhat compile",
