--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 node_modules
-.env
-abi
-
-#Hardhat files
 cache
 artifacts
-.env.prod
-.env.test
+dist
+typechain
+config.ts
+coverage/
+coverage.json
