--- a/package.json
+++ b/package.json
@@ -42,6 +42,6 @@
     "typescript": "^4.0.5"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.3.2"
+    "@openzeppelin/contracts": "4.3.2"
   }
 }
