--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "compile": "npx hardhat compile",
     "deploy": "npx hardhat run scripts/deploy.js --network",
     "etherscan-verify": "npx hardhat verify --network",
-    "test": "npx hardhat test"
+    "test": "npx hardhat test",
+    "coverage": "npx hardhat coverage --solcoverjs .solcover.ts"
   },
   "repository": {
     "type": "git",
@@ -42,6 +43,6 @@
     "typescript": "^4.0.5"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.3.2"
+    "@openzeppelin/contracts": "4.3.2"
   }
 }
